fix - fix for turning alarm off (#102)
