# swagger-api.json
@@ -692,36 +692,6 @@
         ]
       }
     },
-    "/api/alarm/set": {
-      "put": {
-        "operationId": "setAlarm",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/SetAlarm"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "bearer": []
-          }
-        ],
-        "summary": "",
-        "tags": [
-          "Alarm"
-        ]
-      }
-    },
     "/api/alarm/set-mode": {
       "put": {
         "operationId": "setAlarmMode",
@@ -1667,17 +1637,6 @@
         },
         "required": [
           "avgTemperature"
-        ]
-      },
-      "SetAlarm": {
-        "type": "object",
-        "properties": {
-          "isOn": {
-            "type": "boolean"
-          }
-        },
-        "required": [
-          "isOn"
         ]
       },
       "SetAlarmModeRequest": {
